补充表格实验

--- a/shuthesis-master/data/chap03.tex
+++ b/shuthesis-master/data/chap03.tex
@@ -264,7 +264,7 @@ h_{t + 1}^{l + 1} = f(W_i^{l + 1}h_{t + 1}^l + W_h^{l + 1}h_t^{l + 1} + {b^{l + 
     \label{tab:method-comparison}
     \begin{tabularx}{\linewidth}{lXXX}
       \toprule[1.5pt]
-      {\heiti 模型} & {\heiti 准确率(SVD)} & {\heiti 准确率(POD)} & {\heiti 压缩比(POD)} \\\midrule[1pt]
+      {模型} & {准确率(SVD)} & {准确率(POD)} & {压缩比(POD)} \\\midrule[1pt]
       基线 & 85.0\% & 85.0\% & - \\
       HNN=72 & 85.0\% & 85.0\% & - \\
       HNN=64 & 62.9\% & 84.6\% & 93.5\% \\
