--- a/shuthesis-master/data/chap04.tex
+++ b/shuthesis-master/data/chap04.tex
@@ -76,22 +76,35 @@ Agent代理的核心思想之一是将复杂任务分解为多个简单任务，
 \end{figure}
 
 \section{反馈信息优化对比}
-针对表格的信息查询任务测试，如图\ref{fig:4-7}所示。测试涉及对目标表格“隆德县农业灌溉用水确权汇总表”的召回和单特征数量关系的筛选。第一个回答为返回目标表格但无SQL优化回答，在回答中出现了错误答案，误将确权水量为36万立方米的十八里村输出；第二个回答由于在召回过程中，所有的向量相似度过低没有达到阈值，无表格返回；第三个回答为返回错误表格“三里店水库汛期调度运用计划表”导致，最后的回答经过两次优化得到的正确召回目标表格并通过SQL优化后得到正确数据并返回后的结果。
+针对表格检索任务，由水利局专家设计构造了针对隆德水库信息查询的问题集并对本章提出的多级表格检索方法和不进行特殊处理直接使用FAISS内部向量化嵌入方法进行对比测试。在测试中为了避免表格超出上下文长度导致的表格截断问题，只统计在大模型最大上下文长度内的表格与对应问题，测试结果如表\ref{tab:table-retrival-results}所示。
+根据实验结果显示，本章提出的多级表格检索方法在召回率上有明显提升，提高了表格数据的召回率。同时也针对SQL的生成任务做出了测试，通过专家对测试结果的评估判断是否能够生成可执行、有优化效果的SQL。在实验中对于直接生成方式也进行了提示词辅助生成，测试结果如表\ref{tab:SQL-Generation-results}所示，其中SQL生成正确率代表框架生成的能够正确执行的SQL比例，SQL生成恰当率代表框架生成的能够优化表格的SQL比例。
 
-针对表格检索任务，由水利局专家设计构造了针对隆德水库信息查询的问题集并对本章提出的多级表格检索方法和不进行特殊处理直接使用FAISS内部向量化嵌入方法进行对比测试。在测试中为了避免表格超出上下文长度导的致表格截断问题，只统计在大模型最大上下文长度内的表格与对应问题，测试结果如表\ref{tab:table-retrival-results}所示。可以看出，本章提出的多级表格检索方法在召回率上有明显提升，提高了表格数据的召回率。
-\begin{table}[htbp]
+针对后续模型推理回答效果的测试，通过一个信息查询任务回答展示具体效果，如图\ref{fig:4-7}所示。测试涉及对目标表格“隆德县农业灌溉用水确权汇总表”的召回和单特征数量关系的筛选。第一个回答为返回目标表格但无SQL优化回答，在回答中出现了错误答案，误将确权水量为36万立方米的十八里村输出；第二个回答由于在召回过程中，所有的向量相似度过低没有达到阈值，无表格返回；第三个回答为返回错误表格“三里店水库汛期调度运用计划表”导致；最后的回答为通过优化方法正确召回目标表格并使用推理框架得到正确数据的结果。由于最后输入给模型推理的表格只有符合要求的数据，所以避免了模型对数量关系不敏感的缺点，实现回答效果优化。
+\begin{table}[h]
     \centering
     \bicaption{表格检索实验结果}{Table Retrieval Experiment Results}
     \label{tab:table-retrival-results}
     \begin{tabularx}{\linewidth}{XXX}
         \toprule[1.5pt]
-        \textbf{方法} & \textbf{原始方法} & \textbf{多级表格检索方法} \\
+        {方法} & {原始方法} & {多级表格检索方法} \\
         \midrule[1pt]
-        返回情况 & 91/110 & 105/110 \\
+        {召回率} & 66.3\% & 80.9\% \\
         \bottomrule[1.5pt]
     \end{tabularx}
 \end{table}
-
+\begin{table}[h]
+    \centering
+    \bicaption{SQL生成实验结果}{SQL Generation Experiment Results}
+    \label{tab:SQL-Generation-results}
+    \begin{tabularx}{\linewidth}{XXX}
+        \toprule[1.5pt]
+        {方法} & {直接生成} & {循环推理框架} \\
+        \midrule[1pt]
+        {SQL生成正确率} & 46.3\% & 60.9\% \\
+        {SQL生成恰当率} & 30.9\% & 52.7\% \\
+        \bottomrule[1.5pt]
+    \end{tabularx}
+\end{table}
 \section{本章小结}
 本章节主要探讨了基于大模型的表格数据推理框架的设计，旨在提升大模型对结构化表格数据的理解与推理能力。通过深入分析表格数据的特点及大模型在处理表格数据时面临的挑战，提出了一种结合多级表格数据检索与循环推理的框架。
 
