--- a/shuthesis-master/data/chap04.tex
+++ b/shuthesis-master/data/chap04.tex
@@ -16,7 +16,7 @@
     \bicaption{大模型对数学问题的处理结果}{Results of Mathematical Problem Processing by LLM}
     \label{fig:4-1}
 \end{figure}
-同时，面对实际数据分析任务，表格数据输入模态多种多样包括excel表格、纯文本形式表格、数据库database表格和PDF表格等。针对多模态的表格文件主要存在两种处理方式，一种是将所有模态表格均以图片的形式输入大模型\cite{zhengMultimodalTableUnderstanding2024}，利用了LLaVA、Vit\cite{bangMultitaskMultilingualMultimodal2023,chenCLIP2SceneLabelefficient3D2023,liuVisualInstructionTuning2023,radfordLearningTransferableVisual2021,dosovitskiyImageWorth16x162020}等视觉编码模型将表格编码输入大模型，是一种端到端的方法，该方法即使在部分任务的表现上达到了最优，但是该方法缺乏可解释性、消耗计算资源过于庞大且依然不能解决大模型对数字信息的计算和推理能力；第二种方法是利用Agent代理的思想，利用外部接口来代替大模型处理数学问题并简化表格文件，提取关键信息。利用代理思想的方法拓展了大模型在解决问题时的功能多样性，将多种大模型不熟悉的如数字运算、数字推理等任务统一转化成代码生成任务，即大模型最擅长的任务。代理方法相对视觉编码的方法节约了大量训练算力，并且提高了大模型在任务中的可观测性和可解释性，是实际应用中的主流方法。
+同时，面对实际数据分析任务，表格数据输入模态多种多样包括excel表格、纯文本形式表格、数据库database表格和PDF表格等。针对多模态的表格文件主要存在两种处理方式，一种是将所有模态表格均以图片的形式输入大模型\cite{zheng2024multimodal}，利用了LLaVA、Vit\cite{bang2023multitask,chen2023clip2scene,liu2023visual,radford2021learning,dosovitskiy2020image}等视觉编码模型将表格编码输入大模型，是一种端到端的方法，该方法即使在部分任务的表现上达到了最优，但是该方法缺乏可解释性、消耗计算资源过于庞大且依然不能解决大模型对数字信息的计算和推理能力；第二种方法是利用Agent代理的思想，利用外部接口来代替大模型处理数学问题并简化表格文件，提取关键信息。利用代理思想的方法拓展了大模型在解决问题时的功能多样性，将多种大模型不熟悉的如数字运算、数字推理等任务统一转化成代码生成任务，即大模型最擅长的任务。代理方法相对视觉编码的方法节约了大量训练算力，并且提高了大模型在任务中的可观测性和可解释性，是实际应用中的主流方法。
 \subsection{多级表格数据检索构建}
 该方法主要包括对复杂表格数据的预处理、大模型的多轮推理以及外部SQL接口的使用。目前的主流表格推理框架默认所推理表格与问题的相关性，直接将具备回答问题所需信息的表格作为输入，测试框架的推理能力。但是在实际的推理任务中，需要通过文本向量相似性等方法对目标表格进行召回，为了提高召回精度同时保证大模型的推理的后续推理能够顺利进行，下面本章节提出一种多级表格数据目录检索方法。
 
@@ -27,7 +27,7 @@
     \bicaption{表格检索框架示意图}{Schematic Diagram of Table Retrieval Method}
     \label{fig:4-2}
 \end{figure}
-将表格文件转化为JSON、database和txt文本形式存储，再将txt文件中的表名和表头文本嵌入向量化，此时在向量数据库中，每一条对应的表头信息都包含一个特征metadata，即这个向量数据是由哪个文件向量化而来。当输入的问题通过向量搜索模型匹配到目标表格时会直接定位到本地原始文件，根据需要提供JSON文件和database文件给后续框架进行推理等操作。在向量检索中使用双塔检索结构\cite{bahdanauNeuralMachineTranslation2016,sutskeverSequenceSequenceLearning2014,radfordImprovingLanguageUnderstanding2018,fanHierarchicalNeuralStory2018,holtzmanCuriousCaseNeural2020}。在召回过程中，双塔检索结构通过分阶段优化效率与精度，通常分为粗召回（Candidate Generation）和精排序（Re-ranking）两个层级：粗召回阶段采用双塔神经网络架构，其中查询侧（Query Tower）和候选侧（Item Tower）分别通过独立编码器如Transformer，将问题文本编码为词向量，其中候选侧的编码过程为离线进行，在向量库构建时完成。再通过向量内积或余弦相似度计算初步匹配得分，并借助近似最近邻搜索（ANN）快速筛选Top-K候选集，实现计算效率与召回覆盖率的平衡；精排序阶段则引入复杂模型如第\ref{chap:第二章}章中介绍的BERT模型，对粗召回结果进行精细化相关性评估与排序，直接通过端到端的方式将问题和粗召回的候选向量输入，由模型输出相似度得分，从而在可控计算成本下提升整体召回质量。两阶段分工耦合，形成“高效粗筛-精准判别”的递进式检索范式，兼顾系统响应速度与语义匹配深度。由于向量库中的数据庞大，如果直接使用端到端方式筛选合适文本表格会耗费大量的计算资源和时间，所以会提前通过比较文本相似的的方式以离线的方式将数据嵌入，但只依赖这种方法无法保证搜索到准确性，所以使用了先召回后精排的搜索方式。
+将表格文件转化为JSON、database和txt文本形式存储，再将txt文件中的表名和表头文本嵌入向量化，此时在向量数据库中，每一条对应的表头信息都包含一个特征metadata，即这个向量数据是由哪个文件向量化而来。当输入的问题通过向量搜索模型匹配到目标表格时会直接定位到本地原始文件，根据需要提供JSON文件和database文件给后续框架进行推理等操作。在向量检索中使用双塔检索结构\cite{bahdanau2015neural,sutskever2014sequence,fan2018hierarchical,holtzmancurious}。在召回过程中，双塔检索结构通过分阶段优化效率与精度，通常分为粗召回（Candidate Generation）和精排序（Re-ranking）两个层级：粗召回阶段采用双塔神经网络架构，其中查询侧（Query Tower）和候选侧（Item Tower）分别通过独立编码器如Transformer，将问题文本编码为词向量，其中候选侧的编码过程为离线进行，在向量库构建时完成。再通过向量内积或余弦相似度计算初步匹配得分，并借助近似最近邻搜索（ANN）快速筛选Top-K候选集，实现计算效率与召回覆盖率的平衡；精排序阶段则引入复杂模型如第\ref{chap:第二章}章中介绍的BERT模型，对粗召回结果进行精细化相关性评估与排序，直接通过端到端的方式将问题和粗召回的候选向量输入，由模型输出相似度得分，从而在可控计算成本下提升整体召回质量。两阶段分工耦合，形成“高效粗筛-精准判别”的递进式检索范式，兼顾系统响应速度与语义匹配深度。由于向量库中的数据庞大，如果直接使用端到端方式筛选合适文本表格会耗费大量的计算资源和时间，所以会提前通过比较文本相似的的方式以离线的方式将数据嵌入，但只依赖这种方法无法保证搜索到准确性，所以使用了先召回后精排的搜索方式。
 \subsection{循环推理框架构建}
 如上文提到，如果直接将上小节引入的检索方法检索到的表格输入给大模型会存在表格过长超出模型最大上下文长度和大模型对表格数据推理能力差的问题。可以通过引入Agent代理思想，通过SQL执行来处理表格，通过将数据精简减少表格长度和推理难度的方式提高回答质量，同时也使用SQL的计算能力来弥补大模型对数字关系推理的不足。
 
