--- a/shuthesis-master/data/publications.tex
+++ b/shuthesis-master/data/publications.tex
@@ -3,7 +3,7 @@
 
 {\heiti 一、论文}
 
-[1] ***, ***, ***. A Sequence Model Compression Method Based on Proper Orthogonal Decomposition[C/OL]//2023 3rd International Conference on Computer Science and Blockchain (CCSB). 
+[1] ***, ***, ***. A Sequence Model Compression Method Based on Proper Orthogonal Decomposition[C]//2023 3rd International Conference on Computer Science and Blockchain (CCSB). 
 
 {\heiti 二、专利}
 
