--- a/shuthesis-master/data/abstract.tex
+++ b/shuthesis-master/data/abstract.tex
@@ -1,17 +1,17 @@
 % 中英文摘要和关键字
 \begin{cabstract}
-    随着大模型的基础理论研究日趋成熟，其优秀的多模态理解能力和生成能力被应用于众多技术框架和复杂场景工业辅助设计、多参数控制系统运维决策等垂直领域中。然而在大模型的实际应用场景中仍面临许多困难和挑战。大模型本身的优越性能依赖于其庞大的参数及计算资源，并且在实际使用的推理框架中还涉及文本嵌入、知识检索等其他功能模块，这些降低了大模型推理框架的时效性。同时大模型在数据分析领域的应用也有一定的局限，尤其是在表格数据推理方面，大模型对表格数据的推理能力有限，无法直接处理复杂的表格数据，从而造成明显的幻觉问题。此外，针对包含反馈控制的智能系统，由于缺乏足够的训练数据，进一步限制了其推理能力的提升。面对以上问题，本文针对大模型在检索增强生成( Retrieval-Augmented Generation ,RAG)技术框架的应用展开研究，重点研究模型轻量化压缩、表格数据推理优化等关键问题，提高大模型推理效率和对于表格数据的推理能力。并在水利水库调度领域开拓了应用场景，设计并实现了该领域下的基于本地知识库的大模型智能反馈交互系统。本文的主要工作归纳如下： 
+    随着大模型的基础理论研究日趋成熟，其优秀的多模态理解能力和生成能力被应用于众多技术框架和复杂场景工业辅助设计、多参数控制系统运维决策等垂直领域中。然而在大模型的实际应用场景中仍面临许多困难和挑战。大模型本身的优越性能依赖于其庞大的参数及计算资源，并且在实际使用的推理框架中还涉及文本嵌入、知识检索等其他功能模块，这些降低了大模型推理框架的时效性。同时大模型在数据分析领域的应用也有一定的局限，尤其是在表格数据推理方面，大模型对表格数据的推理能力有限，无法直接处理复杂的表格数据，从而造成明显的幻觉问题。此外，针对包含反馈控制的智能系统，由于缺乏足够的训练数据，进一步限制了其推理能力的提升。面对以上问题，本文针对大模型在检索增强生成( Retrieval-Augmented Generation ,RAG)技术框架的应用展开研究，重点研究模型轻量化压缩、表格数据推理优化等关键问题，提高大模型推理效率和对于表格数据的推理能力。并在水利水库调度领域开拓了应用场景，设计并实现了该领域下的基于本地知识库的大模型智能问答系统。本文的主要工作归纳如下： 
 
     1、针对一种文本编码网络——循环神经网络，提出一种基于本征正交分解（Proper Orthogonal Decomposition, POD）的动力学系统模型压缩方法，通过循环神经网络隐藏状态的低维投影，将模型参数量与计算量分别压缩至原始模型的34.4\%与25.6\%，精度损失控制在5\%以内，并将传统动力学方法引入神经网络中，提高了其可解释性。
     
     2、针对大模型对结构化表格数据推理的局限性，设计多级表格检索和推理框架，结合Agent代理思想及SQL代码生成技术，将复杂数值计算转化为可执行程序，并构建检索-优化-生成的循环自纠错机制，优化了推理质量。
     
-    3、针对数字孪生灌区目前存在的智能反馈交互系统缺失，无法适应调度系统升级需求等问题，设计并实现了数字孪生灌区多功能智能知识库，结合RAG技术为智能反馈交互系统提供本地知识支撑。通过建立业务规则库来支撑业务场景的规则适配，规范和约束水利业务管理行为。
+    3、针对数字孪生灌区目前存在的智能问答系统缺失，无法适应调度系统升级需求等问题，设计并实现了数字孪生灌区多功能智能知识库，结合RAG技术为智能问答系统提供本地知识支撑。通过建立业务规则库来支撑业务场景的规则适配，规范和约束水利业务管理行为。
 
-    4、为验证上述基于本征正交分解的动力学系统模型压缩方法、多级表格检索和推理框架等方法在实际场景中的优化效果，设计并实现了基于知识库的智能反馈交互系统。将检索增强生成技术与本地知识库技术结合并成功应用于水库调度、灌溉管理等场景，提升了水利水库调度领域的智能化水平。
+    4、为验证上述基于本征正交分解的动力学系统模型压缩方法、多级表格检索和推理框架等方法在实际场景中的优化效果，设计并实现了基于知识库的智能问答系统。将检索增强生成技术与本地知识库技术结合并成功应用于水库调度、灌溉管理等场景，提升了水利水库调度领域的智能化水平。
     \end{cabstract}
     
-    \ckeywords{大模型，模型压缩，表格数据推理，智能反馈交互系统}
+    \ckeywords{大模型，模型压缩，表格数据推理，智能问答系统}
     
     \begin{eabstract}
         As research on large language models matures, their strong multimodal understanding and generation capabilities have been applied to various technical frameworks and complex industrial scenarios, such as industrial-assisted design, multi-parameter control system operation and maintenance decision-making. However, several challenges remain in the practical application of large language models.
