--- a/shuthesis-master/data/chap03.tex
+++ b/shuthesis-master/data/chap03.tex
@@ -1,7 +1,8 @@
 % !Mode:: "TeX:UTF-8"
 \chapter{循环神经网络的轻量化压缩}
 \label{cha:第三章}
-本章节提出了一种基于动力学模型降阶方法——本征正交分解法的循环神经网络模型压缩方法。首先，介绍了循环神经网络及其变体长短期记忆网络的基本结构及其动力学模型。然后，详细介绍了本征正交分解法的原理和算法。最后，将本征正交分解法应用于循环神经网络模型压缩。实验结果表明，本征正交分解法可以有效地压缩循环神经网络模型，同时保持模型的预测性能。
+% 本章节提出了一种基于动力学模型降阶方法——本征正交分解法的循环神经网络模型压缩方法。首先，介绍了循环神经网络及其变体长短期记忆网络的基本结构及其动力学模型。然后，详细介绍了本征正交分解法的原理和算法。最后，将本征正交分解法应用于循环神经网络模型压缩。实验结果表明，本征正交分解法可以有效地压缩循环神经网络模型，同时保持模型的预测性能。
+时效性是RAG问答系统的关键指标之一，为提高RAG问答系统的推理效率本章节提出了一种基于动力学模型降阶方法——本征正交分解法的循环神经网络模型压缩方法。首先，介绍了循环神经网络及其变体长短期记忆网络的基本结构及其动力学模型，通过将循环神经网络表达为动力学微分方程来增加神经网络的可解释性。然后，详细介绍了本征正交分解法的原理和算法。最后，将本征正交分解法应用于循环神经网络模型压缩。实验结果表明，本征正交分解法可以有效地压缩循环神经网络模型，同时保持模型的性能。
 \section{问题描述}
 尽管以Transformer为核心架构的大语言模型凭借其全局注意力机制与并行化计算优势，在自然语言处理领域占据主导地位，但循环神经网络（Recurrent Neural Network, RNN）在连续提示词编码场景中仍展现出独特的应用价值与轻量化潜力\cite{liu2024gpt,liu2022p}。相较于Transformer模型依赖自注意力机制构建长程依赖所导致的高计算复杂度，RNN通过参数共享时序建模特性，能够以更低的内存开销实现连续提示词编码。这一特性使其在资源受限场景中具有显著优势。进一步地，RNN的循环结构适配轻量化压缩需求。通过动力学系统视角下的模型降阶方法，可对RNN隐藏状态进行低维投影，在保留时序动态特征的前提下实现参数的高效压缩。
 
@@ -160,7 +161,7 @@ h_{t + 1}^{l + 1} = f(W_i^{l + 1}h_{t + 1}^l + W_h^{l + 1}h_t^{l + 1} + {b^{l + 
 通过将隐藏状态投影到较低的状态，可以获得具有较少参数和隐藏状态的模型,如图\ref{fig:原始模型和压缩模型的结构}所示,直观地展示新模型与原始模型在参数和隐藏层维度上的维度差异。其中$i$,$f$,$c$,$o$分别代表输入门、遗忘门、控制们和输出门。$W$,$V^T$分别代表每个们的权重矩阵和投影矩阵，$b$代表偏执，$h_t$,$c_t$,$o_t$分别代表$t$时刻的隐藏层状态、控制状态和输出状态。符号$\hat  \cdot $标志压缩后的模型参数。
 
 在长短期记忆网络模型中，每层网络的隐藏层都有四个门控系数矩阵和输入系数矩阵。
-降低以上矩阵的维度来达到压缩的目的。
+降低以上矩阵的维度来达到压缩的目的。本小节通过将循环神经网络以动力学系统的方式表达，增加了神经网络的可解释性。
 
 \begin{figure}[!htbp]
   \centering
@@ -281,6 +282,6 @@ h_{t + 1}^{l + 1} = f(W_i^{l + 1}h_{t + 1}^l + W_h^{l + 1}h_t^{l + 1} + {b^{l + 
 
 首先在模型的准确率上，POD方法和SVD方法在没有后续微调的静态对比实验中，性能明显优于SVD方法；其次在压缩效率上，SVD方法通过将系数矩阵低秩分解为两个矩阵并利用参数共享来减少参数，这种方法在压缩至同样的隐藏层节点上，压缩效率远远不及POD方法，并且只有在隐藏层节点数小于原始节点数量的一半时才有明显压缩效果，并且SVD方法通过两个低秩矩阵近相乘似一个系数矩阵时，会额外增加模型的计算量，而POD方法在保证压缩效率的同时也显著降低了模型推理时的计算量。因此，POD方法在模型精度、压缩效率和计算量三个层面均优于SVD方法。由于POD方法只在模型内部降低维度，输出维度与原始模型不变，所以当模型应用于文本嵌入等任务时，可以在不降低文本嵌入维度的前提下进行模型的压缩和加速。对于多模型合作任务下，能够保持输入输出向量为度不变，在压缩后不需要改变前后模型的输入输出维度，节省了计算资源，提高了计算效率。
 \section{本章小结}
-本文提出了一种新的模型压缩方法，基于模型降阶方法——本征正交分解法来压缩循环神经网络。该方法可使原始模型具有最优的隐藏节点数，用较小的模型尺寸实现较高的准确率。实验中原始模型很小，总参数只有60k，因此可以将其视为紧凑模型。紧凑模型比参数规模较大的稀疏模型更难在不损失精度的情况下进行压缩。如果紧凑模型的精度损失可以控制在5\%以内，稀疏模型也可以用同样的方式在精度损失更小的情况下压缩模型参数。提出的方法可以应用于长短期记忆网络等具备时间序列特征的神经网络的压缩任务。这种新方法可以将模型大小减少到三分之一，将计算量减少到四分之一，并在精度上将损失控制在5\%。这同时也是一种不经过微调的直接调整网络结构的方法，因此它也可以与权重量化等压缩方法相结合，构建一个紧凑高效的模型。通过动力学系统的模型降阶方法来分析神经网络模型并对其压缩，将循环神经网络用动力学系统微分方程\ref{eq:15}的形式表达，用微分方程和积分的形式替代原始的隐藏层循环计算增加了对神经网络模型的解读视角和可解释性。
+为提高RAG问答系统的时效性，本文提出了一种新的模型压缩方法，基于模型降阶方法——本征正交分解法来压缩循环神经网络。该方法可使原始模型具有最优的隐藏节点数，用较小的模型尺寸实现较高的准确率。实验中原始模型很小，总参数只有60k，因此可以将其视为紧凑模型。紧凑模型比参数规模较大的稀疏模型更难在不损失精度的情况下进行压缩。如果紧凑模型的精度损失可以控制在5\%以内，稀疏模型也可以用同样的方式在精度损失更小的情况下压缩模型参数。提出的方法可以应用于长短期记忆网络等具备时间序列特征的神经网络的压缩任务。这种新方法可以将模型大小减少到三分之一，将计算量减少到四分之一，并在精度上将损失控制在5\%。这同时也是一种不经过微调的直接调整网络结构的方法，因此它也可以与权重量化等压缩方法相结合，构建一个紧凑高效的模型。通过动力学系统的模型降阶方法来分析神经网络模型并对其压缩，将循环神经网络用动力学系统微分方程\ref{eq:15}的形式表达，用微分方程和积分的形式替代原始的隐藏层循环计算增加了对神经网络模型的解读视角和可解释性。
 
 本章内容已发表会议论文并EI检索。
