--- a/shuthesis-master/main.tex
+++ b/shuthesis-master/main.tex
@@ -16,7 +16,7 @@
   %%%%%%%% 1. 配置里面不要出现空行. 2. 不需要的配置信息可以删除. %%%%%%%%%%%
   secretlevel={公开},             % 秘级
   % 中文信息
-  ctitle={基于大模型的智能反馈系统关键技术研究与应用},
+  ctitle={基于大模型的智能问答系统关键技术研究与应用},
   cdisciplines={工学},
   cdepartment={机电工程与自动化学院},
   cmajor={电子信息},
@@ -24,16 +24,16 @@
   csupervisor={***},
   id={********},
   catalognumber={TP391},
-  cdate={2025 年 4 月},
-  coverdate={\zhdigits{2025}年\zhnumber{4}月},
+  cdate={2025 年 7 月},
+  coverdate={\zhdigits{2025}年\zhnumber{7}月},
   % 英文信息
-  etitle={Research and application of key technologies of intelligent feedback system based on large language models},
+  etitle={Research and application of key technologies of Question Answering system based on large language models},
   edisciplines={Engineering},
   edepartment={School of Mechatronic Engineering and Automation},
   emajor={Electronic and Information Engineering},
   eauthor={***},
   esupervisor={***},
-  edate={march, 2025}
+  edate={july, 2025}
 }
 
 \input{data/abstract}
@@ -63,8 +63,8 @@
 \include{data/acknowledgement}        % 致谢
 
 \backmatter
-% \begin{appendix}
-% \input{data/appendix}
-% \end{appendix}
+\begin{appendix}
+\input{data/appendix}
+\end{appendix}
 
 \end{document}
